Fixed alignments

--- a/css/main.css
+++ b/css/main.css
@@ -502,9 +502,9 @@ textarea{
 .Top-Video{
   display: block;
   width: 1000px;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  text-align: left;
+  margin: auto;
+  margin-bottom: 10px;
+  text-align: center;
   height: 700px;
 }
 .Top-Video iframe{
